# soroka-bot

./: .gitignore  README.md  config.py  main.py  pyproject.toml  rag.txt
bot-service/: .gitignore  pyproject.toml
bot-service/rag_api/: app.py  auth.py  rag_storage.py  routes.py
bot-service/telegram_bot/handlers/: collector.py  rag_report.py  start.py
bot-service/telegram_bot/utils/: storage.py
rag-editor-client/: .gitignore  README.md  pubspec.yaml
rag-editor-client/lib/: main.dart
rag-editor-client/test/: widget_test.dart
rag-editor-client/web/: index.html  manifest.json
src/soroka_bot/: config.py  main.py
src/soroka_bot/application/handlers/: collector.py  rag_report.py  start.py
src/soroka_bot/application/jobs/: daily_report.py
src/soroka_bot/application/templates/: ai_rag_text.txt
src/soroka_bot/db/repositories/: recipients_repository.py
src/soroka_bot/domain/models/: bot_context.py  chat_info.py  deepseek_message.py  errors.py  recipient.py  user_message.py
src/soroka_bot/domain/repositories/: recipients_repository.py  user_messages_repository.py
src/soroka_bot/handlers/: recipients_wizard.py  start.py
src/soroka_bot/infrastructure/sqlite/: base.py
src/soroka_bot/infrastucture/db/: base.py
src/soroka_bot/llm_messages/: ai_system_message.txt
src/soroka_bot/telegram_bot/handlers/: collector.py
src/soroka_bot/telegram_bot/jobs/: daily_report.py
src/soroka_bot/utils/: formatting.py
telegram_bot/jobs/: daily_report.py
telegram_bot/models/: message.py
telegram_bot/utils/: formatting.py
(+5 files in other folders)
